Adding comments to the whole project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
+# Sets the port on which the application will run
 server.port=8080
+
+# Configures the database connection details for H2 in-memory database
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
+
+# Configures JPA and Hibernate settings for the H2 database
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configures logging settings for Hibernate SQL statements
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+# Enables and configures the H2 console for easy access to the in-memory database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
